@@ -1,0 +1,10 @@
+Title: Fixed exception when creating links from service views to service group views
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p18
+Date: 1487597151
+Class: fix
+
+When adding a service group column together with a link to the service group list view,
+an exception occured while rendering the service group painter.
